feat: normalize user id, admin id type
