# api/swagger/swagger.json
@@ -34,39 +34,6 @@
     "application/json"
   ],
   "paths": {
-    "/api/v1/admin/initialize": {
-      "post": {
-        "summary": "系统初始化（创建首个管理员）",
-        "operationId": "AdminService_InitializeSystem",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1AdminServiceInitializeSystemResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/v1AdminServiceInitializeSystemRequest"
-            }
-          }
-        ],
-        "tags": [
-          "AdminService"
-        ]
-      }
-    },
     "/api/v1/admin/login": {
       "post": {
         "summary": "管理员登录",
@@ -156,7 +123,40 @@
         ]
       }
     },
-    "/api/v1/admin/system-status": {
+    "/api/v1/admin/system/initialize": {
+      "post": {
+        "summary": "系统初始化（创建首个管理员）",
+        "operationId": "AdminService_InitializeSystem",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1AdminServiceInitializeSystemResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1AdminServiceInitializeSystemRequest"
+            }
+          }
+        ],
+        "tags": [
+          "AdminService"
+        ]
+      }
+    },
+    "/api/v1/admin/system/status": {
       "get": {
         "summary": "检查系统状态",
         "operationId": "AdminService_CheckSystemStatus",
@@ -1766,7 +1766,8 @@
       "type": "object",
       "properties": {
         "id": {
-          "type": "string"
+          "type": "string",
+          "format": "uint64"
         },
         "username": {
           "type": "string"
@@ -1774,7 +1775,7 @@
         "nickname": {
           "type": "string"
         },
-        "permissions": {
+        "roles": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1840,15 +1841,15 @@
     "v1AdminServiceInitializeSystemRequest": {
       "type": "object",
       "properties": {
-        "adminUsername": {
+        "username": {
           "type": "string",
           "title": "管理员用户名"
         },
-        "adminPassword": {
+        "password": {
           "type": "string",
           "title": "管理员密码"
         },
-        "adminNickname": {
+        "nickname": {
           "type": "string",
           "title": "管理员昵称"
         }
